# discogs-tag-updater

./: .gitignore  README.md  add_to_spotify.py  config.ini.example  config.toml.example  discogs.py  discogs_api-aesir.py  logger.py  main.py  manage_spotify.py  pyproject.toml  wiki.txt
discogs/: __init__.py  __main__.py  common.py  config.py  dtag.py  music_file.py  rename_from_tags.py  tag_updater.py  update_tags.py
local_files/: __init__.py  common.py  config.py  logger.py  music_file.py  music_files.py  rename_file.py  rename_from_tags.py  update_tags.py  update_tags_from_discogs.py
scripts/: __init__.py  local_to_spotify.py  local_to_ytmusic.py  manage_spotify_duplicates.py  rename_files_from_tags.py  spotify_to_ytmusic.py  update_tags_from_discogs.py  ytmusic_to_spotify.py
spotify/: __init__.py  __main__.py  add_local_tracks.py  add_track.py  add_track_to_spotify.py  add_tracks.py  common.py  config.py  get_spotify_track_details.py  get_spotify_track_ids.py  get_track_details.py  get_track_ids.py  import_from_ytmusic.py  list_user_playlists.py  logger.py  main.py  manage_duplicates.py  search_spotify.py  search_spotify_track.py  search_track.py  select_match.py  select_playlist.py  setup_spotify.py  types.py  ytmusic_to_spotify.py
ytmusic/: __init__.py  __main__.py  add_local_tracks.py  add_track_to_ytmusic.py  check_ytmusic_setup_browser.py  check_ytmusic_setup_oauth.py  choose_auth_method.py  common.py  config.py  create_playlist.py  get_track_details.py  get_track_ids.py  get_ytmusic_track_details.py  get_ytmusic_track_ids.py  import_from_spotify.py  list_user_playlists.py  logger.py  manage_duplicates.py  search_track.py  search_ytmusic_track.py  search_ytmusic_tracks.py  select_match.py  select_playlist.py  setup_ytmusic.py  spotify_to_ytmusic.py  types.py
