[project]
name = "discogs-tag-updater"
version = "1.5.0"
description = "Updates genre, year and covers tags of .mp3 and .flac files based on track title and artist using the Discogs database."
authors = [
    { name = "Aesir" },
    { name = "bolinocroustibat", email = "me@adriencarpentier.com" },
]
dependencies = [
    "colorama<1.0.0,>=0.4.4",
    "discogs-client==2.3.0",
    "fuzzywuzzy<1.0.0,>=0.18.0",
    "mutagen<2.0.0,>=1.45.1",
    "requests<3.0.0,>=2.25.1",
]
requires-python = "<4.0,>=3.7,"
license = { text = "MIT" }

[project.urls]
homepage = ""

[tool]
rye = { dev-dependencies = [
    "ruff>=0.2.2",
] }

[tool.poetry]
name = "discogs-tag-updater"
version = "1.3.1"
description = "Updates genre, year and covers tags of .mp3 and .flac files based on track title and artist using the Discogs database."
authors = ["Aesir", "bolinocroustibat"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.4"
discogs-client = "2.3.0"
fuzzywuzzy = "^0.18.0"
mutagen = "^1.45.1"
requests = "^2.25.1"

[tool.pdm]
includes = []
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.2",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
