[project]
name = "discogs-tag-updater"
version = "2.0.1"
description = "Updates genre, year and covers tags of .mp3 and .flac files based on track title and artist using the Discogs database."
authors = [
    { name = "Aesir" },
    { name = "bolinocroustibat", email = "me@adriencarpentier.com" },
]
dependencies = [
    "colorama<1.0.0,>=0.4.4",
    "discogs-client==2.3.0",
    "fuzzywuzzy<1.0.0,>=0.18.0",
    "inquirer>=2.10.1",
    "mutagen<2.0.0,>=1.45.1",
    "requests<3.0.0,>=2.25.1",
    "spotipy>=2.23.0",
    "ytmusicapi>=0.23.0",
]
requires-python = ">=3.7,<4.0"
license = { text = "MIT" }

[tool]
rye = { dev-dependencies = [
    "ruff>=0.2.2",
] }

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
